[package]
name = "wstui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
chrono = "0.4.19"
clap = { version = "3.1.18", features = ["derive"] }
crossterm = "0.23.2"
tokio = "1.18.2"
tokio-tungstenite = "0.17.1"
tui = "0.18.0"
unicode-width = "0.1.9"
