[package]
name = "wstui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
chrono = "0.4.19"
clap = { version = "3.1.18", features = ["derive"] }
crossterm = "0.23.2"
dotenv = "0.15.0"
tokio = { version = "1.18.2", features = ["full"] }
tokio-tungstenite = "0.17.1"
tracing = "0.1.34"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.11"
tui = "0.18.0"
unicode-width = "0.1.9"
url = "2.2.2"

[features]
